--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
 
   broker:
@@ -11,12 +9,13 @@ services:
       - "9092:9092"
       - "9101:9101"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092'
+      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker:29092,PLAINTEXT_HOST://host.docker.internal:9092'
       KAFKA_CONTROLLER_QUORUM_VOTERS: '1@broker:29093'
       KAFKA_LISTENERS: 'PLAINTEXT://broker:29092,CONTROLLER://broker:29093,PLAINTEXT_HOST://0.0.0.0:9092'
 
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
     ports:
       - 9999:8080
     environment:
@@ -33,3 +32,15 @@ services:
       POSTGRES_DB: rush_hour
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
+
+  api:
+    build:
+      context: apps/api
+    container_name: api
+    ports:
+      - "3000:3000"
+    environment:
+      DATABASE_URL: "postgresql://root:root@host.docker.internal:5434/rush_hour?schema=public"
+      KAFKA_BROKER: "host.docker.internal:9092"
+      REDIS_HOST: "host.docker.internal"
+      REDIS_PORT: 6379
