--- a/apps/cleaner/package.json
+++ b/apps/cleaner/package.json
@@ -26,7 +26,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^5.0.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "ioredis": "^5.4.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
