clean + delay consumer

--- a/apps/consumer/Dockerfile
+++ b/apps/consumer/Dockerfile
@@ -18,4 +18,5 @@ COPY --from=builder /app/package*.json ./
 COPY --from=builder /app/dist ./dist
 
 EXPOSE 3000
-CMD [ "npm", "run", "start:prod" ]
+
+CMD ["sh", "-c", "sleep 15 && npm run start:prod"]
